--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Pandas-R-Us</title>
-  <link rel="stylesheet" href="main.css" type="text/css">
-  <link rel="stylesheet" href="contact.css" type="text/css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="page-wrap">
@@ -24,30 +23,40 @@
         </nav>
       </header>
       <div id="wrapperImg">
+
+      <h1 class="contact-h1-style">Contact</h1>
+
         <section>
+
           <ul class="homepageGallery">
-            <li>
-              <a href="/images/sadPanda.jpg">
-                <img src="/images/sadPanda.jpg" alt="" class="homepageImg">
+            <li class="contact-h1-style">
+              <h2 class="contact-name-style">Nick P</h2>
+              <a href="/images/contact.images/nickP-cat">
+                <img src="/images/contact.images/nickP-cat.jpeg" alt="Picture of Nick P" class="homepageImg">
               </a>
-              <p>Saddest of all the Pandas</p>
+              <p>Nick</p>
             </li>
-            <li>
-              <a href="/images/flatPanda.jpg">
-                <img src="/images/flatPanda.jpg" alt="" class="homepageImg">
+            <li class="contact-h2-style"><!-- contact-h1-style = to get rid of the dot to the left of the name -->
+              <h2 class="contact-name-style">Joe S</h2>
+              <a href="/images/contact.images/joeS">
+                <img src="/images/contact.images/joeS.jpg" alt="Picture of Joe S" class="homepageImg">
               </a>
-              <p>Flattest of all the Pandas</p>
+              <p>Joe</p>
             </li>
-            <li>
-              <a href="/images/cutePanda.jpg">
-                <img src="/images/cutePanda.jpg" alt="" class="homepageImg">
+            <li class="contact-h1-style">
+              <h2 class="contact-name-style">Joe S</h2>
+              <a href="/images/contact.images/guilH">
+                <img src="/images/contact.images/guilH.jpeg" alt="Picture of Guil H" class="homepageImg">
               </a>
-              <p>Cutest of all the Pandas</p>
+              <p>Guil</p>
             </li>
           </ul>
         </section>
-      </div>
-    </div>
+
+
+      </div><!-- wrapperImg -->
+    </div><!-- page-wrap -->
+
     <footer>
       <a href="http://twitter.com/nickrp"> <img src="/images/TwitterLogo_white.png" alt="twitter Logo" class="social-icon"></a>
       <a href="https://www.facebook.com/nickpettit"> <img src="/images/FB-f-Logo__blue_57.png" alt="Facebook Logo" class="social-icon"></a>
