--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Pandas-R-Us</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <div class="page-wrap">
@@ -24,24 +24,24 @@
       </header>
       <div id="wrapperImg">
         <section>
+          <h1 class="homepageTitle">The place to build your very own Panda!</h1>
+        </section>
+        <section>
           <ul class="homepageGallery">
             <li>
               <a href="/images/sadPanda.jpg">
                 <img src="/images/sadPanda.jpg" alt="" class="homepageImg">
               </a>
-              <p>Saddest of all the Pandas</p>
             </li>
             <li>
               <a href="/images/flatPanda.jpg">
                 <img src="/images/flatPanda.jpg" alt="" class="homepageImg">
               </a>
-              <p>Flattest of all the Pandas</p>
             </li>
             <li>
               <a href="/images/cutePanda.jpg">
                 <img src="/images/cutePanda.jpg" alt="" class="homepageImg">
               </a>
-              <p>Cutest of all the Pandas</p>
             </li>
           </ul>
         </section>
