changed culture page to match mission's format

--- a/culture.html
+++ b/culture.html
@@ -23,10 +23,12 @@
     </nav>
     </header><!-- /header -->
     <body>
-
+  <div id="cultureBox">
     <div id="cultureTitle">
       <h1>Company Culture</h1>
     </div>
+
+
     <div class="cultureCols" id="culCol1">
       <img src="http://2.bp.blogspot.com/_KaFGCf9sSqg/Swi6LU7qU_I/AAAAAAAAAzc/er2URbU-kkI/s1600/panda.jpg" alt="Panda in a business suit." class="cultureImg">
       <p class="cultureText">Sesame snaps donut danish chupa chups cookie sweet. Chocolate cake bear claw lemon drops. Caramels jelly-o brownie cookie sesame snaps sweet roll marshmallow cupcake danish. Cake ice cream soufflé marzipan topping dessert jelly-o. Ice cream topping chupa chups cake. Gummi bears gingerbread dragée carrot cake.
@@ -36,6 +38,7 @@ Donut bear claw cheesecake cookie. Wafer dragée bonbon bonbon macaroon tootsie 
       <img src="https://pbs.twimg.com/media/A3qNXomCUAIjmmi.jpg" alt="Relaxing panda." class="cultureImg">
       <p class="cultureText">Sesame snaps donut danish chupa chups cookie sweet. Chocolate cake bear claw lemon drops. Caramels jelly-o brownie cookie sesame snaps sweet roll marshmallow cupcake danish. Cake ice cream soufflé marzipan topping dessert jelly-o. Ice cream topping chupa chups cake. Gummi bears gingerbread dragée carrot cake.
 Donut bear claw cheesecake cookie. Wafer dragée bonbon bonbon macaroon tootsie roll cake cookie bear claw. Chupa chups soufflé biscuit. Cupcake marzipan jujubes fruitcake cupcake sweet tiramisu tootsie roll marshmallow. Bear claw cheesecake bear claw chocolate brownie tiramisu croissant cotton candy cake. Liquorice liquorice gingerbread gingerbread apple pie chocolate bar sesame snaps ice cream macaroon.</p>
+    </div>
     </div>
   </div>
    <footer>
