--- a/mission.html
+++ b/mission.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body id="missionBody">
+<div class="page-wrap">
+
 <div >
       <header>
         <nav>
@@ -23,7 +25,7 @@
         </nav>
       </header>
       </div>
-	<div id="missionBox" class="page-wrap">
+	<div id="missionBox" >
 		<article id="mission">
 			<h1 id="missionHeader">Company Mission</h1>
 			<p>Pandas-R-Us is here to provide the world with cute Pandas. Even if we have to paint a normal ugly bear to do it.
@@ -31,6 +33,7 @@
 			All of our bears volunteer for the program and no animals are hurt in the process. If your bear begins to lose its color we will fix it, at no cost to the customer. Our team of highly professional bear artist's can efficiently and quickly re-spray your bear at your location or at our headquarters. </p>
 		</article>
 	</div>
+  </div>
 	<footer>
       <a href="http://twitter.com/nickrp"> <img src="/images/TwitterLogo_white.png" alt="twitter Logo" class="social-icon"></a>
       <a href="https://www.facebook.com/nickpettit"> <img src="/images/FB-f-Logo__blue_57.png" alt="Facebook Logo" class="social-icon"></a>
