--- a/culture.html
+++ b/culture.html
@@ -14,9 +14,9 @@
       <h1>Pandas-R-Us</h1>
       </a>
       <ul>
-        <li><a href="index.html" class="selected">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a href="culture.html">Culture</a></li>
+        <li><a href="culture.html" class="selected">Culture</a></li>
         <li><a href="mission.html">Mission</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
