added contact markup and styling in main.css under contact images

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="page-wrap">
+    <div>
       <header>
         <nav>
           <a href="index.html" id="logo">
@@ -22,39 +22,40 @@
           </ul>
         </nav>
       </header>
-      <div id="wrapperImg">
 
-      <h1 class="contact-h1-style">Contact</h1>
+        <h1 class="contact-h1-style">Contact</h1>
+        <hr>
+          <section>
 
-        <section>
+            <ul class="contact-gallery">
+              <li class="contact-li">
+                <h2 class="contact-name-style">Nick P</h2>
+                <a href="/images/contact.images/nickP-cat">
+                  <img src="/images/contact.images/nickP-cat.jpeg" alt="Picture of Nick P" class="contactImg">
+                </a>
+                <p class="contact-p">Nick is our senior complaint manager. Any and all complaints should be directed at him.</p>
+              </li>
 
-          <ul class="homepageGallery">
-            <li class="contact-h1-style">
-              <h2 class="contact-name-style">Nick P</h2>
-              <a href="/images/contact.images/nickP-cat">
-                <img src="/images/contact.images/nickP-cat.jpeg" alt="Picture of Nick P" class="homepageImg">
-              </a>
-              <p>Nick</p>
-            </li>
-            <li class="contact-h2-style"><!-- contact-h1-style = to get rid of the dot to the left of the name -->
-              <h2 class="contact-name-style">Joe S</h2>
-              <a href="/images/contact.images/joeS">
-                <img src="/images/contact.images/joeS.jpg" alt="Picture of Joe S" class="homepageImg">
-              </a>
-              <p>Joe</p>
-            </li>
-            <li class="contact-h1-style">
-              <h2 class="contact-name-style">Joe S</h2>
-              <a href="/images/contact.images/guilH">
-                <img src="/images/contact.images/guilH.jpeg" alt="Picture of Guil H" class="homepageImg">
-              </a>
-              <p>Guil</p>
-            </li>
-          </ul>
-        </section>
+              <li class="contact-li">
+                <h2 class="contact-name-style">Joe S</h2>
+                <a href="/images/contact.images/joeS">
+                  <img src="/images/contact.images/joeS.jpg" alt="Picture of Joe S" class="contactImg">
+                </a>
+                <p class="contact-p">Joe is our art guy. He might be a good person if you are wanting to make your panda a mascot for a school.</p>
+              </li>
+
+              <li class="contact-li">
+                <h2 class="contact-name-style">Joe S</h2>
+                <a href="/images/contact.images/guilH">
+                  <img src="/images/contact.images/guilH.jpeg" alt="Picture of Guil H" class="contactImg">
+                </a>
+                <p class="contact-p">Guil is our trick master. He can help you trick out your panda and teach it tricks.</p>
+              </li>
+            </ul>
+          </section>
 
 
-      </div><!-- wrapperImg -->
+
     </div><!-- page-wrap -->
 
     <footer>
