--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Pandas-R-Us</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
     <div>
