add js for cards and started styling cards

--- a/products.html
+++ b/products.html
@@ -22,31 +22,28 @@
           </ul>
         </nav>
       </header>
-      <article class="card">
-    <header id="card1" class="header">
-      <h1>Panda Bear</h1>
-    </header><!-- /header -->
-    <div class="picture"><img src="images/panda1.jpg" alt="Painted Panda" ></div>
-    <p class="description"></p>    
-    <header id="card1B" class="header">
-      specifications
-    </header><!-- /header -->
-    <div class="bold">
-    <p></p>
-    <p></p>
+      <div id="card">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
-    <footer>
-     
-    </footer>
-    <header id="card1C" class="header">
-      Price per unit
-    </header><!-- /header -->
-    <div class="bold">
-    <p></p>
-    <p></p>
-    <p></p>
-    </div>
-  </article>
+
     </div>
     <footer>
       <a href="http://twitter.com/nickrp"> <img src="/images/TwitterLogo_white.png" alt="twitter Logo" class="social-icon"></a>
@@ -54,4 +51,5 @@
       <p class="copyRight">&copy; 2016 Pandas-R-Us</p>
     </footer>
 </body>
+<script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
 </html>
