fixed title tags on several pages

--- a/mission.html
+++ b/mission.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Pandas-R-Us</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body id="missionBody">
