fixed selected class and title on contacts page.

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
           <h1>Pandas-R-Us</h1>
           </a>
           <ul>
-            <li><a href="index.html" class="selected">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="culture.html">Culture</a></li>
             <li><a href="mission.html">Mission</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="selected">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -45,7 +45,7 @@
               </li>
 
               <li class="contact-li">
-                <h2 class="contact-name-style">Joe S</h2>
+                <h2 class="contact-name-style">Guil H</h2>
                 <a href="/images/contact.images/guilH">
                   <img src="/images/contact.images/guilH.jpeg" alt="Picture of Guil H" class="contactImg">
                 </a>
