cleaned up javascript to easier read/modify

--- a/testshit.html
+++ b/testshit.html
@@ -10,3 +10,14 @@
     ($price)
   </header><!-- /header -->
 </article>
+
+
+
+
+
+<article class="cards">
+  <h1>Title</h1>
+  <img src="url" alt="Pandas">
+  <p>Description</p>
+  <p>Price</p>
+</article>
