fixed styling differences between culture and mission pages

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Pandas-R-Us</title>
   <link rel="stylesheet" href="main.css" type="text/css">
 </head>
-<body>
+<body class="body">
     <div>
       <header>
         <nav>
