--- a/culture.html
+++ b/culture.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     </header><!-- /header -->
-    <body>
+    <body class="body">
   <div id="cultureBox">
     <div id="cultureTitle">
       <h1>Company Culture</h1>
