--- a/mission.html
+++ b/mission.html
@@ -6,7 +6,7 @@
 	<title>Pandas-R-Us</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body id="missionBody">
+<body class="body">
 <div class="page-wrap">
 
 <div >
@@ -27,7 +27,9 @@
       </div>
 	<div id="missionBox" >
 		<article id="mission">
-			<h1 id="missionHeader">Company Mission</h1>
+    <div id="headerBox">
+      <h1 id="missionHeader">Company Mission</h1>
+    </div>
 			<p>Pandas-R-Us is here to provide the world with cute Pandas. Even if we have to paint a normal ugly bear to do it.
 			We strive to use only organic non-toxic paints and dyes to not harm the transitiong Grizzlys, Brown bears, and Polar bears.
 			All of our bears volunteer for the program and no animals are hurt in the process. If your bear begins to lose its color we will fix it, at no cost to the customer. Our team of highly professional bear artist's can efficiently and quickly re-spray your bear at your location or at our headquarters. </p>
