--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
-<body>
+<body class="body">
     <div class="page-wrap">
         <header>
             <nav>
